obj/Release/MosesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Nick\Documents\Visual Studio 2015\Projects\MOSES\Moses.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MOSES {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class MosesParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, STRING=50, NAME=51, NUMBER=52, 
		INT=53, HEX=54, FLOAT=55, Digit=56, WS=57, NL=58;
	public const int
		RULE_chunk = 0, RULE_block = 1, RULE_innerfunctionBlock = 2, RULE_tryCatchFinally = 3, 
		RULE_ifElseLadder = 4, RULE_returnBlock = 5, RULE_loopBlock = 6, RULE_classBlock = 7, 
		RULE_localConstVarAssign = 8, RULE_classDecl = 9, RULE_functionDecl = 10, 
		RULE_whileLoop = 11, RULE_loop = 12, RULE_loopParse = 13, RULE_loops = 14, 
		RULE_varAssign = 15, RULE_functionDef = 16, RULE_functionParameterList = 17, 
		RULE_functionParameterDefault = 18, RULE_functionParameterNoDefault = 19, 
		RULE_functionPrameterVariadic = 20, RULE_variadic = 21, RULE_ref = 22, 
		RULE_functionBody = 23, RULE_segmentBlock = 24, RULE_this = 25, RULE_complexFunctionCall = 26, 
		RULE_complexVariable = 27, RULE_variableOrFunction = 28, RULE_var = 29, 
		RULE_functionCall = 30, RULE_newInstance = 31, RULE_exp = 32, RULE_unaryOp = 33, 
		RULE_constExp = 34, RULE_prePostIncrDecr = 35, RULE_preIncrDecr = 36, 
		RULE_postIncrDecr = 37, RULE_incrDecr = 38, RULE_operatorOr = 39, RULE_operatorAnd = 40, 
		RULE_operatorComparison = 41, RULE_operatorPower = 42, RULE_operatorUnary = 43, 
		RULE_operatorAddSub = 44, RULE_operatorMulDivMod = 45, RULE_operatorBitwise = 46;
	public static readonly string[] ruleNames = {
		"chunk", "block", "innerfunctionBlock", "tryCatchFinally", "ifElseLadder", 
		"returnBlock", "loopBlock", "classBlock", "localConstVarAssign", "classDecl", 
		"functionDecl", "whileLoop", "loop", "loopParse", "loops", "varAssign", 
		"functionDef", "functionParameterList", "functionParameterDefault", "functionParameterNoDefault", 
		"functionPrameterVariadic", "variadic", "ref", "functionBody", "segmentBlock", 
		"this", "complexFunctionCall", "complexVariable", "variableOrFunction", 
		"var", "functionCall", "newInstance", "exp", "unaryOp", "constExp", "prePostIncrDecr", 
		"preIncrDecr", "postIncrDecr", "incrDecr", "operatorOr", "operatorAnd", 
		"operatorComparison", "operatorPower", "operatorUnary", "operatorAddSub", 
		"operatorMulDivMod", "operatorBitwise"
	};

	private static readonly string[] _LiteralNames = {
		null, "'try'", "'catch'", "'finally'", "'if'", "'('", "')'", "'else'", 
		"'return'", "'break'", "'continue'", "'='", "'class'", "'{'", "'}'", "'while'", 
		"'loop'", "'loopParse'", "','", "'*'", "'ref'", "'this'", "'.'", "'['", 
		"']'", "'new'", "' . '", "'++'", "'--'", "'||'", "'&&'", "'<'", "'>'", 
		"'<='", "'>='", "'!='", "'=='", "'**'", "'+'", "'-'", "'!'", "'~'", "'/'", 
		"'%'", "'//'", "'&'", "'|'", "'^'", "'<<'", "'>>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "STRING", "NAME", "NUMBER", "INT", "HEX", "FLOAT", "Digit", 
		"WS", "NL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Moses.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MosesParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ChunkContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(MosesParser.Eof, 0); }
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitChunk(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_chunk);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__7) | (1L << T__11) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__20) | (1L << T__26) | (1L << T__27) | (1L << NAME))) != 0)) {
				{
				{
				State = 94; block();
				}
				}
				State = 99;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 100; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public InnerfunctionBlockContext innerfunctionBlock() {
			return GetRuleContext<InnerfunctionBlockContext>(0);
		}
		public FunctionDeclContext functionDecl() {
			return GetRuleContext<FunctionDeclContext>(0);
		}
		public ClassDeclContext classDecl() {
			return GetRuleContext<ClassDeclContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			State = 105;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102; innerfunctionBlock();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103; functionDecl();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 104; classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InnerfunctionBlockContext : ParserRuleContext {
		public VarAssignContext varAssign() {
			return GetRuleContext<VarAssignContext>(0);
		}
		public ComplexFunctionCallContext complexFunctionCall() {
			return GetRuleContext<ComplexFunctionCallContext>(0);
		}
		public LoopsContext loops() {
			return GetRuleContext<LoopsContext>(0);
		}
		public IfElseLadderContext ifElseLadder() {
			return GetRuleContext<IfElseLadderContext>(0);
		}
		public ReturnBlockContext returnBlock() {
			return GetRuleContext<ReturnBlockContext>(0);
		}
		public PrePostIncrDecrContext prePostIncrDecr() {
			return GetRuleContext<PrePostIncrDecrContext>(0);
		}
		public TryCatchFinallyContext tryCatchFinally() {
			return GetRuleContext<TryCatchFinallyContext>(0);
		}
		public InnerfunctionBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_innerfunctionBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterInnerfunctionBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitInnerfunctionBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInnerfunctionBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InnerfunctionBlockContext innerfunctionBlock() {
		InnerfunctionBlockContext _localctx = new InnerfunctionBlockContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_innerfunctionBlock);
		try {
			State = 114;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; varAssign();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108; complexFunctionCall();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 109; loops();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 110; ifElseLadder();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 111; returnBlock();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 112; prePostIncrDecr();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 113; tryCatchFinally();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TryCatchFinallyContext : ParserRuleContext {
		public SegmentBlockContext[] segmentBlock() {
			return GetRuleContexts<SegmentBlockContext>();
		}
		public SegmentBlockContext segmentBlock(int i) {
			return GetRuleContext<SegmentBlockContext>(i);
		}
		public TryCatchFinallyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tryCatchFinally; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterTryCatchFinally(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitTryCatchFinally(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTryCatchFinally(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TryCatchFinallyContext tryCatchFinally() {
		TryCatchFinallyContext _localctx = new TryCatchFinallyContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_tryCatchFinally);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(T__0);
			State = 117; segmentBlock();
			State = 124;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				State = 118; Match(T__1);
				State = 119; segmentBlock();
				State = 122;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					State = 120; Match(T__2);
					State = 121; segmentBlock();
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfElseLadderContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public SegmentBlockContext[] segmentBlock() {
			return GetRuleContexts<SegmentBlockContext>();
		}
		public SegmentBlockContext segmentBlock(int i) {
			return GetRuleContext<SegmentBlockContext>(i);
		}
		public IfElseLadderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifElseLadder; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterIfElseLadder(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitIfElseLadder(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfElseLadder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfElseLadderContext ifElseLadder() {
		IfElseLadderContext _localctx = new IfElseLadderContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_ifElseLadder);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; Match(T__3);
			State = 127; Match(T__4);
			State = 128; exp(0);
			State = 129; Match(T__5);
			State = 130; segmentBlock();
			State = 133;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 131; Match(T__6);
				State = 132; segmentBlock();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnBlockContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ReturnBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterReturnBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitReturnBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnBlockContext returnBlock() {
		ReturnBlockContext _localctx = new ReturnBlockContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_returnBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(T__7);
			State = 137;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 136; exp(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopBlockContext : ParserRuleContext {
		public InnerfunctionBlockContext innerfunctionBlock() {
			return GetRuleContext<InnerfunctionBlockContext>(0);
		}
		public LoopBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loopBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterLoopBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitLoopBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoopBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopBlockContext loopBlock() {
		LoopBlockContext _localctx = new LoopBlockContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_loopBlock);
		try {
			State = 142;
			switch (_input.La(1)) {
			case T__0:
			case T__3:
			case T__7:
			case T__14:
			case T__15:
			case T__16:
			case T__20:
			case T__26:
			case T__27:
			case NAME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 139; innerfunctionBlock();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 140; Match(T__8);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 141; Match(T__9);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBlockContext : ParserRuleContext {
		public LocalConstVarAssignContext localConstVarAssign() {
			return GetRuleContext<LocalConstVarAssignContext>(0);
		}
		public FunctionDeclContext functionDecl() {
			return GetRuleContext<FunctionDeclContext>(0);
		}
		public ClassDeclContext classDecl() {
			return GetRuleContext<ClassDeclContext>(0);
		}
		public ClassBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterClassBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitClassBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassBlockContext classBlock() {
		ClassBlockContext _localctx = new ClassBlockContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_classBlock);
		try {
			State = 147;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 144; localConstVarAssign();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 145; functionDecl();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 146; classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalConstVarAssignContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(MosesParser.NAME, 0); }
		public ConstExpContext constExp() {
			return GetRuleContext<ConstExpContext>(0);
		}
		public LocalConstVarAssignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localConstVarAssign; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterLocalConstVarAssign(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitLocalConstVarAssign(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalConstVarAssign(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocalConstVarAssignContext localConstVarAssign() {
		LocalConstVarAssignContext _localctx = new LocalConstVarAssignContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_localConstVarAssign);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; Match(NAME);
			State = 150; Match(T__10);
			State = 151; constExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(MosesParser.NAME, 0); }
		public ClassBlockContext[] classBlock() {
			return GetRuleContexts<ClassBlockContext>();
		}
		public ClassBlockContext classBlock(int i) {
			return GetRuleContext<ClassBlockContext>(i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.EnterClassDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMosesListener typedListener = listener as IMosesListener;
			if (typedListener != null) typedListener.ExitClassDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMosesVisitor<TResult> typedVisitor = visitor as IMosesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
